2003-11-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* MArray-defs.h (DO_VS_OP2, DO_VV_OP2): Accept args for element
	type and the names of the left and right operands.  Change all uses.

	* so-array.cc, so-array.h: New files.  Move streamoff_array here
	from src/ov-streamoff.h and src/ov-streamoff.cc.

2003-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* MArrayN.cc (operator -=, operator +=): Check dimensions, not
	just length.

	* Array2.h, Array3.h, DiagArray2.h, DiagArray2.cc, MDiagArray2.h,
	ArrayN.h:  Add this-> or Base:: qualifiers for references to
	non-dependent member functions and data as needed.

	* DiagArray2.h, DiagArray2.cc: Delete unused code.

	* Array2.h (Array2<T>::operator =): Don't copy dimensions here.
	* Array3.h (Array3<T>::operator =): Likewise.
	* DiagArray2.h (DiagArray2<T>::operator =): Likewise.
	Include Array.h, not Array2.h.

2003-11-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* str-vec.cc (list_in_columns): Fix previous change.

	* dim-vector.h (dim_vector::num_ones): New function.
	* Array.cc (maybe_delete_elements): Use it instead of
	num_ones (const Array<int>&).

	* Array.cc (assignN): Omit dubious check of singleton dimensions.

	* dNDArray.cc (NDArray::all_elements_are_int_or_inf_or_nan,
	NDArray::any_element_is_inf_or_nan, NDArray::too_large_for_float):
	New functions.
	* dNDArray.h: Provide decls.

	* dMatrix.h (Matrix::any_element_is_negative,
	Matrix::any_element_is_inf_or_nan, Matrix::too_large_for_float,
	Matrix::all_elements_are_int_or_inf_or_nan, Matrix::all_integers):
	Simplify.

	* dNDArray.cc (NDArray::abs): Make it work for N-d arrays.
	* CNDArray.cc (ComplexNDArray::abs): Likewise.

	* dNDArray.cc (real, imag): New functions.
	* dNDArray.h: Provide decls.

2003-11-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (TEMPLATE_SRC): Move MArrayN.cc here from MATRIX_SRC.

2003-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.h (Array<T>::resize (int, const T&)): Reinstate.